--- a/package.json
+++ b/package.json
@@ -3,17 +3,20 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
+    "start": "node server.js",
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e",
+    "postinstall": "ng build --output-path angularapp --aot --prod"
   },
   "private": true,
   "dependencies": {
     "@angular/animations": "~10.1.4",
+    "@angular/cli": "~10.1.4",
     "@angular/common": "~10.1.4",
     "@angular/compiler": "~10.1.4",
+    "@angular/compiler-cli": "~10.1.4",
     "@angular/core": "~10.1.4",
     "@angular/fire": "^6.0.3",
     "@angular/forms": "~10.1.4",
@@ -23,9 +26,12 @@
     "@angular/router": "~10.1.4",
     "@ng-bootstrap/ng-bootstrap": "^7.0.0",
     "bootstrap": "^4.5.2",
+    "express": "^4.17.1",
     "firebase": "^7.22.1",
+    "path": "^0.12.7",
     "rxjs": "~6.6.3",
     "tslib": "^2.0.0",
+    "typescript": "~4.0.3",
     "zone.js": "~0.10.2"
   },
   "devDependencies": {
@@ -54,5 +60,9 @@
     "inquirer": "^6.2.2",
     "inquirer-autocomplete-prompt": "^1.0.1",
     "open": "^7.0.3"
+  },
+  "engines": {
+    "node": "v12.16.1",
+    "npm": "6.13.4"
   }
 }
